--- a/stylesheets/scss/_content-formatted.scss
+++ b/stylesheets/scss/_content-formatted.scss
@@ -59,6 +59,9 @@
   p {
     margin: 0;
     padding-bottom: 30px;
+    &:last-child {
+      padding-bottom: 0;
+    }
   }
 
   ul {
