--- a/stylesheets/scss/_header.scss
+++ b/stylesheets/scss/_header.scss
@@ -15,6 +15,7 @@
       max-width: 80%;
     }
   }
+  z-index: 11;
   margin: auto;
   padding: 63px 0 0;
   max-width: 960px;
